--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
 
             document.getElementById('result').innerHTML = `Total occurrences of '${searchWord}' in the repository: ${totalOccurrences}`;
         }
-    </script>
+    </script> guddylove guddylove
 </body>
 </html>
