--- a/for-org.html
+++ b/for-org.html
@@ -58,6 +58,6 @@
 
             document.getElementById('result').innerHTML = `Total occurrences of '${searchWord}' in the organization's repositories: ${totalOccurrences}`;
         }
-    </script>
+    </script> guddylove
 </body>
 </html>
